Flash Message Validation

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
         crossorigin="anonymous"></script>
 
 <footer>
-    <a href="https://github.com/nemanenikita/InternetHistory_Assignment">Nikita Nemane</a>&#169;<a href="https://validator.w3.org/check?uri=https://validator.w3.org/nu/?doc=http%3A%2F%2Fhistoryofinternetproject.eastus.azurecontainer.io%2Fpage6.html"> Validator</a>
+    <a href="https://github.com/rutujab006/internethistory1"> 2021 Rutuja Bendre</a> - <a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fhistoryofinternet2.eastus.azurecontainer.io%2F">W3C</a>
 </footer>
 </body>
 </html>
